Fix color sampler in wrap around mode

Some paint devices don't support painting in wrap around mode,
but they can still be sampled from, so bypass the
supportsWraproundMode check when color sampling.

BUG:478190